--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   </head>
   <body>
     <div class="container">
+      <h1>La météo des Girier</h1>
       <div class="row justify-content-center">
         <div class="col-12 sm-6 my-3">
           <form>
@@ -48,26 +49,34 @@
         </div>
         <div class="col-12 col-sm-6 d-flex justify-content-center my-3">
           <div class="box-container">
-            <div id="city" class="box"></div>
-            <div id="temp" class="box"></div>
-            <div id="humidity" class="box"></div>
-            <div id="wind" class="box"></div>
+            <div id="city2" class="box"></div>
+            <div id="temp2" class="box"></div>
+            <div id="humidity2" class="box"></div>
+            <div id="wind2" class="box"></div>
           </div>
         </div>
         <div class="col-12 col-sm-6 d-flex justify-content-center my-3">
           <div class="box-container">
-            <div id="city" class="box"></div>
-            <div id="temp" class="box"></div>
-            <div id="humidity" class="box"></div>
-            <div id="wind" class="box"></div>
+            <div id="city3" class="box"></div>
+            <div id="temp3" class="box"></div>
+            <div id="humidity3" class="box"></div>
+            <div id="wind3" class="box"></div>
           </div>
         </div>
         <div class="col-12 col-sm-6 d-flex justify-content-center my-3">
           <div class="box-container">
-            <div id="city" class="box"></div>
-            <div id="temp" class="box"></div>
-            <div id="humidity" class="box"></div>
-            <div id="wind" class="box"></div>
+            <div id="city4" class="box"></div>
+            <div id="temp4" class="box"></div>
+            <div id="humidity4" class="box"></div>
+            <div id="wind4" class="box"></div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 d-flex justify-content-center my-3">
+          <div class="box-container">
+            <div id="city5" class="box"></div>
+            <div id="temp5" class="box"></div>
+            <div id="humidity5" class="box"></div>
+            <div id="wind5" class="box"></div>
           </div>
         </div>
       </div>
