--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>La météo des Girier</h1>
+      <h1>La météo des Girier ⛅</h1>
       <div class="row justify-content-center">
         <div class="col-12 sm-6 my-3">
           <form>
